--- a/sass/editorMenu.sass
+++ b/sass/editorMenu.sass
@@ -1,2 +1,9 @@
 .editor-menu
     display: grid
+    grid-template-columns: 1fr 1fr 1fr
+
+.selectable-editor
+    width: 100%
+
+    p
+        text-align: center
