--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,8 +1,11 @@
 @use 'editorMenu.sass'
 // @use 'foundation/lists'
 
-*
-    margin: 40px
-
 body
-    background-color: red
+    background-color: turquoise
+
+.page-container
+    width: 100%
+    // Maybe change these margins
+    margin-left: 0
+    margin-right: 0
