Created files and settings basics

--- a/pug/editorMenu.pug
+++ b/pug/editorMenu.pug
@@ -36,3 +36,5 @@ html(lang="en")
                 +selectable('img/data.png', "Data")
 
                 +selectable('img/settings.png', "Settings")
+                
+                //- In the bottom left or something there is an exit button to take you back to the home screen
