--- a/pug/index.pug
+++ b/pug/index.pug
@@ -64,7 +64,8 @@ html(lang="en")
     body 
         h1.main-title Goddard Simulation
 
-        
+        //- Whenever you click on the add button, the text changes from add new rocket to an input for your rockets name
+        //- Options to import
 
 
 
