--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,8 +1,12 @@
 @use 'editorMenu.sass'
-// @use 'foundation/lists'
+
+*
+    box-sizing: border-box
 
 body
     background-color: turquoise
+    margin: 0
+    padding: 0
 
 .page-container
     width: 100%
@@ -13,3 +17,6 @@ body
 .title
     width: 100%
     text-align: center
+
+a
+    text-decoration: none
