--- a/sass/editorMenu.sass
+++ b/sass/editorMenu.sass
@@ -1,9 +1,40 @@
+// Work on responsiveness so that the grid items stay about square no matter what size the screen is
 .editor-menu
     display: grid
     grid-template-columns: 1fr 1fr 1fr
+    grid-template-rows: 1fr 1fr 1fr
+    margin: 0
+    width: 100%
+    max-height: 100vh
+    overflow: hidden
+    padding: 20px
+
+    gap: 10px
 
 .selectable-editor
     width: 100%
+    height: 100%
+    display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: end
+
+    min-height: 0
+    min-width: 0
+
+    border: 10px solid black
+    border-radius: 20px
+
+    img
+        min-width: 0
+        min-height: 0
+        max-width: 100%
+        max-height: 100%
+        padding: 20px
+        margin-top: auto
+        margin-bottom: auto
 
     p
-        text-align: center
+        min-height: 20px
+        margin-top: auto
+        font-size: 2rem
