--- a/pug/index.pug
+++ b/pug/index.pug
@@ -70,8 +70,8 @@ html(lang="en")
             div drop down
         
         //- When you unfocus it and there is nothing in the field, it should turn back
-        input(type="text" )
-        button right carat
+        input.name-input(type="text" )
+        button.submit-name right carat
 
         //-  options to import in a drop down next to it
         
