--- a/pug/simulation.pug
+++ b/pug/simulation.pug
@@ -7,5 +7,12 @@ html(lang="en")
         
         base(href="../")
         link(rel="stylesheet", href="./css/main.css")
-        title Document
+        title Adjust Simulation Parameters
     body 
+
+        include ./helpers
+
+        +menuButton 
+
+
+        +continueButton("./html/data.html")
