--- a/sass/editorMenu.sass
+++ b/sass/editorMenu.sass
@@ -1,4 +1,7 @@
 // Work on responsiveness so that the grid items stay about square no matter what size the screen is
+// Maybe they should go from dark on light to light on dark when you are hovering
+// Maybe the visited ones should be light on dark
+
 .editor-menu
     display: grid
     grid-template-columns: 1fr 1fr 1fr
