--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,4 +1,15 @@
+@use 'constants.sass'
+
 @use 'editorMenu.sass'
+@use 'home.sass'
+@use 'recovery.sass'
+@use 'noseCone.sass'
+@use 'fins.sass'
+@use 'data.sass'
+@use 'simulation.sass'
+
+// Use raleway extra-light and roboto. Use the colors from coolors.co
+// Custom icons designed in inkscape
 
 *
     box-sizing: border-box
