--- a/pug/motor.pug
+++ b/pug/motor.pug
@@ -4,17 +4,16 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        
+
         base(href="../")
         link(rel="stylesheet", href="./css/main.css")
-        title Design Rocket Nose Cone
+        title Design Rocket Motor
     body 
         include ./helpers
 
+
         +menuButton
 
-        +input("Diameter", "20", "diameter", 20)
 
-        +continueButton('./html/body.html')
 
-        script(src="./renderingJS/nose.js") 
+        +continueButton("./html/recovery.html")
